Add: Ramond: René Girard. La théorie mimétique, de l'apprentissage à l'apocalypse

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -789,6 +789,10 @@
           <a href="https://www.editionsadsolem.fr/livre/fiche/penser-la-foi-chretienne-apres-rene-girard-9782372980852"><abbr>ISBN</abbr> 9782372980852</a>.
           <br />Bernard Perret is vice president of the <span lang="fr">Association Recherches Mimétiques</span>.
         </li>
+        <li lang="fr">Ramond, Charles:
+          <i class="booktitle">René Girard. La théorie mimétique, de l'apprentissage à l'apocalypse</i>. Débats philosophiques. Presses universitaires de France, 2010. (224 pages)
+          <a href="https://www.puf.com/content/Ren%C3%A9_Girard_La_th%C3%A9orie_mim%C3%A9tique_de_lapprentissage_%C3%A0_lapocalypse"><abbr>ISBN</abbr> 978-2-13-057072-1</a>.
+        </li>
         <li>Redekop, Vern Neufeld; Ryba, Thomas (editors):
           <i class="booktitle">René Girard and Creative Mimesis</i>. Lexington Books, 2013. (342 pages)
           <a href="https://rowman.com/ISBN/9780739168998/Ren%C3%A9-Girard-and-Creative-Mimesis"><abbr>ISBN</abbr> 978-1-4985-5057-4</a>.
