Add: Turner: Philology: The Forgotten Origins of the Modern Humanities

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -897,6 +897,10 @@
         <li>
           <a href="http://vos.ucsb.edu/">Voice of the Shuttle</a>.
         </li>
+        <li>Turner, James:
+          <i class="booktitle">Philology: The Forgotten Origins of the Modern Humanities</i>. Princeton University Press, 2015.
+          <a href="https://press.princeton.edu/books/paperback/9780691168586/philology"><abbr>ISBN</abbr> 9780691168586</a>.
+        </li>
         <li>Booth, Wayne C. (editor):
           <i class="booktitle">The Knowledge Most Worth Having</i>. University of Chicago Press, 1967. (226 pages)
           <a href="https://press.uchicago.edu/ucp/books/book/chicago/K/bo4342835.html"><abbr>ISBN</abbr> 9780226065762</a>.
