--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -1076,6 +1076,14 @@
           <q>The government is doing research on cow dung and cow urine. When cow dung is burnt, the smoke that emits has the power to destroy the virus.
           I believe cow dung can help fight the outbreak of coronavirus.</q>
         </li>
+        <li>Sengupta, Shuddhabrata:
+          <a href="https://thewire.in/government/kumbh-2021-astrology-mortality-and-the-indifference-to-life-of-leaders-and-stars">Kumbh 2021: Astrology, Mortality and the Indifference to Life of Leaders and Stars</a>,
+          <i class="website">The Wire (India)</i>, 20.04.2021.
+          <br /><a href"https://twitter.com/RichardDawkins/status/1388911082903719938">Richard Dawkins tweeted this article on 02.05.2021</a>
+          saying,
+          <q cite="https://twitter.com/RichardDawkins/status/1388911082903719938">Astrology believers in millions-strong superspreader event. Sun entering Aries & Jupiter in Aquarius so it had to be 2021.<br />
+          “Death is inevitable, but we must maintain our traditions.” “With Goddess Ganga’s blessings, faith will triumph over disease.”</q>
+        </li>
         <!--@@new section-->
         <li>
           <a href="https://www.rte.ie/news/ireland/2018/0612/970070-blasphemy/">Blasphemy referendum set to take place in October</a>,
