Add: Conche: Le fondement de la morale; Nurock: Sommes-nous ...

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -246,6 +246,14 @@
 
     <h2>Other Links</h2>
     <ul>
+      <li><span lang="fr">Conche, Marcel:
+        <i class="booktitle">Le fondement de la morale</i>. Perspectives critiques. Presses universitaires de France,</span> 2003. (160 pages)
+        <a href="https://www.puf.com/content/Le_fondement_de_la_morale" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-053663-5</a>.
+      </li>
+      <li><span lang="fr">Nurock, Vanessa:
+        <i class="booktitle">Sommes-nous naturellement moraux&nbsp;?</i> Fondements de la politique. Presses universitaires de France,</span> 2011. (304 pages)
+        <a href="https://www.puf.com/content/Sommes-nous_naturellement_moraux" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-057076-9</a>.
+      </li>
       <li>
         <a href="http://www.ethics.be/ethics/index.php?LAN=E">Ethics.be (English)</a>&nbsp;/
         <a href="http://www.ethics.be/ethics/index.php?LAN=N" hreflang="nl" lang="nl">Ethics.be (Nederlands)</a>:
@@ -375,6 +383,10 @@
       <li>
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      <li><span lang="fr">:
+        <i class="booktitle"></i>.</span>
+        <a href="" hreflang="fr"><abbr>ISBN</abbr> </a>.
       </li>
       <li><span lang="nl">
         <a href=""></a>,
