Add: Macherey: Introduction à l'Éthique de Spinoza

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1575,6 +1575,11 @@
             <!--@@also check other books/links in the article-->
           </ul>
         </li>
+        <li><span lang="fr">Macherey, Pierre:
+          <i class="booktitle">Introduction à l'Éthique de Spinoza. La première partie: La nature des choses</i>. Philosopher. Presses universitaires de France,</span> 2001. (368 pages)
+          <a href="https://www.puf.com/content/Introduction_%C3%A0_l%C3%89thique_de_Spinoza_La_premi%C3%A8re_partie" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-052132-7</a>.
+          (First published in 1998.)
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=G5cAxJCz1Xk">Susan James: Why Should We Read Spinoza? (07/11/2014)</a>
           (<i class="ytchannel">RoyIntPhilosophy</i> on YouTube, 48 minutes, 08.11.2020).
