Add: Pico della Mirandola

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1532,6 +1532,60 @@
         </li>
       </ul>
 
+      <h2>Giovanni Pico della Mirandola (1463 – 1494)</h2>
+      <ul>
+        <li>Pico della Mirandola, Giovanni:<span lang="de">
+          <i class="booktitle">Neunhundert Thesen. Lateinisch–Deutsch</i>. Herausgegeben von Nikolaus Egel. Philosophische Bibliothek 708. Meiner,</span> 2018. (XLIV + 217 pages)
+          <a href="https://meiner.de/neunhundert-thesen.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-3183-3</a>.
+        </li>
+        <li>Pico della Mirandola, Giovanni:<span lang="de">
+          <i class="booktitle">Über die Würde des Menschen. Lateinisch–Deutsch</i>. Herausgegeben von Norbert Baumgarten und August Buck. Philosophische Bibliothek 427. Meiner,</span> 1990. (XXVII + 91 pages)
+          <a href="https://meiner.de/uber-die-wurde-des-menschen.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-0959-7.</a>.
+          <!--03.05.2021: €10: Fundus-Online: https://www.buchfreund.de/de/d/e/9783787309597/de-hominis-dignitate-lateinisch-deutsch-ueber-die?bookId=100831724 -->
+        </li>
+      </ul>
+      <!--
+        Farmer, Stephen Alan: Syncretism in the West : Pico's 900 theses (1486): The Evolution of Traditional, Religious, and Philosophical Systems. With text, translation, and commentary. Tempe (Arizona): Medieval & Renaissance Texts & Studies, 1998. (xv + 595 pages)
+        https://lccn.loc.gov/98021436
+        B785.P53 C664 1998
+
+        Pico della Mirandola, Giovanni: Commentary on a Poem of Platonic Love. Translated by Douglas Carmichael. Lanham, MD : University Press of America, c1986. (xvi + 114 pages)
+        https://lccn.loc.gov/86001606
+        PQ4610.B4 A83613 1986
+
+        Pico della Mirandola, Giovanni: De dignitate hominis. Lateinisch und Deutsch. Lateinisch und Deutsch. Eingeleitet von Eugenio Garin. Übersetzung: Hans H. Reich und Frank-Rutger Hausmann. Bad Homburg v. d. H., Berlin, Zürich, Gehlen (1968)
+        https://lccn.loc.gov/71388124
+        B785.P53 D44 1968
+
+        Pico della Mirandola, Giovanni: De hominis dignitate = Über die Würde des Menschen / Giovanni Pico della Mirandola ; übersetzt von Norbert Baumgarten ; herausgegeben und eingeleitet von August Buck. Hamburg : F. Meiner Verlag, c1990.
+        https://lccn.loc.gov/90227588
+        B785.P53 D446 1990
+
+        Pico della Mirandola, Giovanni: Neunhundert Thesen : Lateinisch-Deutsch. Übersetzt, mit einer Einleitung und Anmerkungen herausgegeben von Nikolaus Egel. Hamburg : Felix Meiner Verlag, [2018]. (xliv + 217 pages)
+        https://lccn.loc.gov/2018373123
+        BT785.P53 C66 2018
+
+        Pico della Mirandola, Giovanni: Œuvres philosophiques. Texte latin, traduction et notes par Olivier Boulnois et Giuseppe Tognon ; suivis d'une étude sur "Humanisme et dignité de l'homme" selon Pic de la Mirandole par Olivier Boulnois ; préface par Giuseppe Tognon. Paris : Presses universitaires de France, 2004. (liii + 354 pages)
+        https://lccn.loc.gov/2006422874
+        B785.P52 F8 2004
+
+        Pico della Mirandola, Giovanni: On the Dignity of Man. Translated by Charles Glenn Wallis. On being and the one / translated by Paul J.W. Miller. Heptaplus / translated by Douglas Carmichael ; with an introduction by Paul J. Miller. Indianapolis : Hackett Pub., 1998. (xxxiii + 174 pages)
+        https://lccn.loc.gov/97051631
+        B785.P52 E5 1998
+
+        Pico della Mirandola, Giovanni: Oration on the dignity of man : a new translation and commentary / Pico della Mirandola ; [edited by] Francesco Borghesi, Michael Papio, Massimo Riva. New York : Cambridge University Press, c2012. (vii + 308 pages)
+        https://lccn.loc.gov/2011046648
+        B785.P52 E5 2012
+
+        Pico della Mirandola, Giovanni: Über das Seiende und das Eine = De ente et uno : Lateinisch-Deutsch / Giovanni Pico della Mirandola ; herausgegeben, übersetzt und kommentiert von Paul Richard Blum ... [et al.]. Hamburg : Meiner, 2006. (lxxxix + 93 pages)
+        https://lccn.loc.gov/2006482058
+        B785.P53 D42315 2006
+
+        Pico della Mirandola, Giovanni: Life of Giovanni Pico della Mirandola / Gianfrancesco Pico della Mirandola. Oration / Giovanni Pico della Mirandola ; edited and translated by Brian P. Copenhaver and Michael J. B. Allen. Cambridge, Massachusetts : Harvard University Press, 2021.
+        https://lccn.loc.gov/2020057341
+        B785.P54 P52613 2021
+      -->
+
       <h3>Blaise Pascal (1623 – 1662)</h3>
       <ul>
         <li>Pascal, Blaise:
