Add: Pico della Mirandola: Über die Würde des Menschen

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1543,6 +1543,14 @@
           <a href="https://meiner.de/uber-die-wurde-des-menschen.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-0959-7.</a>.
           <!--03.05.2021: €10: Fundus-Online: https://www.buchfreund.de/de/d/e/9783787309597/de-hominis-dignitate-lateinisch-deutsch-ueber-die?bookId=100831724 -->
         </li>
+        <li>Pico della Mirandola, Giovanni:<span lang="de">
+          <i class="booktitle">Über die Würde des Menschen</i>. Aus dem Neulateinischen übertragen von Herbert Werner Rüssel. Mit der Lebensbeschreibung Picos von Thomas Morus (1510). Dritte Auflage. Zürich: Manesse,</span> 1992. (Out of print)
+          <!--03.05.2021:
+            (1996) €6 + €9: Antikvariát Valentinská: https://www.buchfreund.de/de/d/p/94696054/ueber-die-wuerde-des-menschen-manesse-buecherei-8
+            (1992) €16: Buchantiquariat Clerc Fremin: https://www.buchfreund.de/de/d/p/97955865/ueber-die-wuerde-des-menschen-aus-dem
+            (1988) €14: HESPERUS Buchhandlung & VersandAntiquariat: https://www.buchfreund.de/de/d/p/100313157/ueber-die-wuerde-des-menschen
+          -->
+        </li>
       </ul>
       <!--
         Farmer, Stephen Alan: Syncretism in the West : Pico's 900 theses (1486): The Evolution of Traditional, Religious, and Philosophical Systems. With text, translation, and commentary. Tempe (Arizona): Medieval & Renaissance Texts & Studies, 1998. (xv + 595 pages)
