Add quote below first h3

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -74,7 +74,6 @@
     </blockquote-->
     <!--@@move this quote to a skepticism page -->
 
-
     <section>
       <h2>General Philosophy</h2>
       <!--@@also check Open University playlist "Philosophy": https://www.youtube.com/playlist?list=PLD3908045CB2ACBA7 -->
@@ -85,6 +84,13 @@
       </p-->
 
       <h3>Philosophy: Definition and Benefits</h3>
+      <blockquote class="chapterintroquote">
+        <p>What is philosophy?<br />Hegel don't hurt me,<br />Don't hurt me,<br />No more.
+        <cite>(Freely adapted from Haddaway's <a href="https://en.wikipedia.org/wiki/What_Is_Love">What Is Love<a>.)</cite></p>
+        <!--see Eduardo Haros / @edharos, 09.05.2021: https://twitter.com/edharos/status/1391217069446754305
+          in response to a tweet by Nigel Warburton: https://twitter.com/philosophybites/status/1391022482593914880
+        -->
+      </blockquote>
       <ul>
         <li>
           <a href="https://www.youtube.com/watch?v=mIYdx6lDDhg">What is Philosophy for?</a>
