Add: Oratio de hominis dignitate / Rede über die Würde des Menschen (Reclam)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1557,6 +1557,11 @@
             (1988) €14: HESPERUS Buchhandlung & VersandAntiquariat: https://www.buchfreund.de/de/d/p/100313157/ueber-die-wuerde-des-menschen
           -->
         </li>
+        <li>Pico della Mirandola, Giovanni:<span lang="de">
+          <i class="booktitle">Oratio de hominis dignitate / Rede über die Würde des Menschen. Lateinisch/Deutsch</i>. Auf der Textgrundlage der Editio princeps hrsg. und übers. von Gerd von der Gönna. Reclam,</span> 1997. (125 pages)
+          <a href="https://www.reclam.de/detail/978-3-15-009658-1/Pico_della_Mirandola__Giovanni/Oratio_de_hominis_dignitate___Rede_ueber_die_Wuerde_des_Menschen" hreflang="de"><abbr>ISBN</abbr> 978-3-15-009658-1</a>.
+          <!--03.05.2021: €1,49: Versandantiquariat Felix Mücke: https://www.buchfreund.de/de/d/e/9783150096581/oratio-de-hominis-dignitate-rede-ueber-die-wuerde?bookId=101330108 -->
+        </li>
       </ul>
       <!--
         Farmer, Stephen Alan: Syncretism in the West : Pico's 900 theses (1486): The Evolution of Traditional, Religious, and Philosophical Systems. With text, translation, and commentary. Tempe (Arizona): Medieval & Renaissance Texts & Studies, 1998. (xv + 595 pages)
