Add books by Acheson, Courant et al, Applebaum

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -343,6 +343,19 @@
 
     <h2 id="learning-maths">Learning Mathematics</h2>
     <ul>
+      <li>Acheson, David:
+        <i class="booktitle">1089 and All That: A Journey into Mathematics</i>. Oxford University Press, 2010. (184 pages)
+        <a href="https://global.oup.com/academic/product/1089-and-all-that-9780199590025"><abbr>ISBN</abbr> 9780199590025</a>.
+      </li>
+      <li>Courant, Richard; Robbins, Herbert:
+        <i class="booktitle">What Is Mathematics? An Elementary Approach to Ideas and Methods</i>. Second edition. Revised by Ian Stewart. Oxford University Press, 1996. (592 pages)
+        <a href="https://global.oup.com/ukhe/product/what-is-mathematics-9780195105193"><abbr>ISBN</abbr> 9780195105193</a>.
+        <!--also at https://global.oup.com/academic/product/what-is-mathematics-9780195105193 -->
+      </li>
+      <li>Applebaum, David:
+        <i class="booktitle">Limits, Limits Everywhere: The Tools of Mathematical Analysis</i>. Oxford University Press, 2012. (218 pages)
+        <a href="https://global.oup.com/academic/product/limits-limits-everywhere-9780199640089"><abbr>ISBN</abbr> 9780199640089</a>.
+      </li>
       <li>Baez, John:
         <a href="http://math.ucr.edu/home/baez/books.html">How to Learn Math and Physics</a>.
         Last updated on 20.08.2018.
@@ -351,7 +364,7 @@
         <a href="https://brilliant.org/">Brilliant: Math and science courses done right</a>.
       </li>
       <li>
-        <a  href="https://triseum.com/variant-limits/">Variant - Triseum</a>:
+        <a href="https://triseum.com/variant-limits/">Variant - Triseum</a>:
         Variant:Limits is <q>a collection of games with targeted calculus learning objectives, both at the high school and collegiate level.</q>
       </li>
       <li>
