Add: Eaglestone: Literature: Why It Matters

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -183,8 +183,7 @@
           <a href="http://fordhampress.com/index.php/the-humanities-and-pubic-life-paperback.html"><abbr>ISBN</abbr> 9780823257058</a>.
         </li>
         <li>Holm, Poul; Jarrick, Arne; Scott, Dominic:
-          <a href="http://www.palgrave.com/page/detail/humanities-world-report-2015-poul-holm/?sf1=barcode&st1=9781137500274"
-          class="booktitle">Humanities World Report 2015</a>.
+          <a href="https://www.palgrave.com/gp/book/9781137500267"><i class="booktitle">Humanities World Report 2015</i></a>.
           Palgrave Macmillan, 2014.
           <br/>This book available on a <abbr title="Creative Commons">CC</abbr> BY
           licence; you can find it for free on
@@ -214,7 +213,15 @@
           <q>Although ostensibly focused on the narrow issue of the decline of classics as an academic discipline and as a subject of study in American universities, this book is really about the loss of a common, humanistic core in contemporary education and culture.
           (&hellip;) Genuine recovery of that tradition requires more than defense against varied feminists and deconstructionists; it means a thorough rethinking of the modern Enlightenment project itself.</q>
           <br />From <a href="https://www.kirkusreviews.com/book-reviews/victor-davis-hanson/who-killed-homer/">Kirkus Revie</a>:
-          <q>Hanson and Heath are not so much right-wing revisionists as passionate Hellenists whose belief in Greece and Rome's central role in Western civilization is fervent and articulate. Writing against the multicultural grain, they stress the unique aspects of Greek and Roman society, e.g., the idea of open dissent in the polis and the concept of civilian militias and citizen-soldiers, and maintain the continued importance of The Iliad and The Odyssey. Their rigorous pedagogic program for returning Classics to a pride of place in the humanities, however, involves too many Draconian measures--scrapping the doctoral dissertation, ending post-doc fellowships, junking peer conference junkets--to be practical. An elegy that slaughters a hecatomb of sacred cows along the way.</q>
+          <q>Hanson and Heath are not so much right-wing revisionists as passionate Hellenists whose belief in Greece and Rome's central role in Western civilization is fervent and articulate.
+          Writing against the multicultural grain, they stress the unique aspects of Greek and Roman society, e.g., the idea of open dissent in the polis and the concept of civilian militias and citizen-soldiers, and maintain the continued importance of The Iliad and The Odyssey. Their rigorous pedagogic program for returning Classics to a pride of place in the humanities, however, involves too many Draconian measures--scrapping the doctoral dissertation, ending post-doc fellowships, junking peer conference junkets--to be practical. An elegy that slaughters a hecatomb of sacred cows along the way.</q>
+        </li>
+        <li>Eaglestone, Robert:
+          <i class="booktitle">Literature: Why It Matters</i>. Polity, 2019. (160 pages)
+          <a href="https://politybooks.com/bookdetail/?isbn=9781509532315"><abbr>ISBN</abbr> 9781509532322</a>.
+          <br />From the publisher's book description:
+          <q>(&hellip;) Eaglestone shows that studying literature can change who you are, turning you from a ‘reader’ into a ‘critic’: someone attuned to the ways we make meaning in our world.
+          Literature is a living conversation which provides endless opportunities to rethink and reinterpret our societies and ourselves. With examples ranging from Sappho to Skyrim, this book shows how literature offers freer and deeper ways of thinking and being.</q>
         </li>
         <li>
           <a href="https://www.youtube.com/watch?v=6Sxttk5REkM">Who Killed the Liberal Arts?</a>
