Add: Morely: Classics: Why It Matters

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -223,6 +223,17 @@
           <q>(&hellip;) Eaglestone shows that studying literature can change who you are, turning you from a ‘reader’ into a ‘critic’: someone attuned to the ways we make meaning in our world.
           Literature is a living conversation which provides endless opportunities to rethink and reinterpret our societies and ourselves. With examples ranging from Sappho to Skyrim, this book shows how literature offers freer and deeper ways of thinking and being.</q>
         </li>
+        <li>Morley, Neville:
+          <i class="booktitle">Classics: Why It Matters</i>. Polity, 2018. (140 pages)
+          <a href="https://politybooks.com/bookdetail/?isbn=9781509517923"><abbr>ISBN</abbr> 9781509517930</a>.
+          <br />From the publisher's book description:
+          <q>For generations, the study of Greek and Latin was used to train the elites of the western world. Knowledge of classical culture, it was believed, produced more cultivated, creative individuals;
+          Greece and Rome were seen as pinnacles of civilization, and the origins of western superiority over the rest of the world.
+          <br />Few today are willing to defend this elitist, sometimes racist, vision of the importance of classics, and it is no longer considered essential education for politicians and professionals. Shouldn’t classics then be obsolete?
+          <br />Far from it. As Neville Morley shows, the ancients are as influential today as they ever have been, and we ignore them at our peril.
+          Not only do they have much to teach us about the past, but they can offer important lessons for the complex cultural, social and political worlds of the present.
+          (&hellip;)</q>
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=6Sxttk5REkM">Who Killed the Liberal Arts?</a>
           is a five-minute YouTube video by
