Add: Rickles: What is Philosophy of Science?

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -307,6 +307,17 @@
         <br />From the publisher's book description:
         <q>The book is a translation of the second edition of a much-used and research-based Chinese textbook. As a succinct and issue-based introduction to the Western philosophy of science, the book brings eight focal issues in the field to the fore and augments each topic by incorporating Chinese perspectives. (&hellip;)</q>
       </li>
+      <li>Rickles, Dean:
+        <i class="booktitle">What is Philosophy of Science?</i>. Polity, 2020. (160 pages)
+        <a href="https://politybooks.com/bookdetail/?isbn=9781509534166"><abbr>ISBN</abbr> 9781509534173</a>.
+        <br />This introductory book consists of four chapters: &ldquo;Philosophy, Science and History&rdquo;, &ldquo;Logic and Philosophy of Science&rdquo;,
+        &ldquo;Demarcation and the Scientific Method&rdquo; and &ldquo;The Nature of Scientific Theories&rdquo;.
+        (Rickles also wrote <i class="booktitle">The Philosophy of Physics</i>.)
+      </li>
+      <li>Staley, Kent W.:
+        <i class="booktitle">An Introduction to the Philosophy of Science</i>. Cambridge Introductions to Philosophy. Cambridge University Press, 2014. (298 pages)
+        <a href="https://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/introduction-philosophy-science?format=PB"><abbr>ISBN</abbr> 9780521129992</a>.
+      </li>
     </ul>
 
     <h2>Introductory Lectures (YouTube)</h2>
