Add: Rickles: The Philosophy of Physics

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -470,6 +470,16 @@
         C. H. Beck, 2014.</span> (127 p.) 
         <a href="http://www.chbeck.de/Sieroka-Philosophie-Physik/productview.aspx?product=13673164"><abbr>ISBN</abbr> 978-3-406-66794-7</a> (paperback).
       </li>
+      <li>Rickles, Dean:
+        <i class="booktitle">The Philosophy of Physics</i>. Polity, 2016. (212 pages)
+        <a href="https://politybooks.com/bookdetail/?isbn=9780745669816"><abbr>ISBN</abbr> 9780745669823</a>.
+        <br />From the publisher's book description:
+        <q>Does the future exist already? What is space? Are time machines physically possible? What is quantum mechanical reality like? Are there many universes?
+        Is there a ‘true’ geometry of the universe? Why does there appear to be an arrow of time? Do humans play a special role in the world?<br />
+        In this unique introductory book, Dean Rickles guides the reader through these and other core questions that keep philosophers of physics up at night.
+        He discusses the three pillars of modern physics (quantum mechanics, statistical mechanics, and the theories of relativity), in addition to more cutting-edge themes such as econophysics, quantum gravity, quantum computers, and gauge theories.
+        The book’s approach is based on the idea that philosophy of physics is a kind of ‘interpretation game’ in which we try to map physical theories onto our world. But the rules of this game often lead to a multiplicity of possible victors: rarely do we encounter a simple answer. (&hellip;)</q>
+      </li>
       <li>Maudlin, Tim: 
         <i class="booktitle">Philosophy of Physics: Space and Time</i>,
         Princeton University Press, 2012. 
