Add: Keuth: The Philosophy of Karl Popper

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -440,17 +440,15 @@
         <a href="https://www.acco.be/nl-be/items/9789033489334/Wetenschappelijk-denken"><abbr>ISBN</abbr> 978-90-334-8933-4</a>.
         <br /><span lang="en-GB">
         This book is not so much an introduction to philosophy of science as an introduction to scientific thinking and practice.
-        The first part explains the development of the scientific worldview, 
-        then discusses scientific thinking as a method, as a social phenomenon, 
-        and how scientific thinking works in practice.
-        The chapter on scientific thinking as a method discusses Popper; 
+        The first part explains the development of the scientific worldview,
+        then discusses scientific thinking as a method, as a social phenomenon, and how scientific thinking works in practice.
+        The chapter on scientific thinking as a method discusses Popper;
         the chapter on science as a social phenomenon discusses Kuhn (and also mentions Ludwik Fleck).
         The is no discussion of philosophy of science since Kuhn (<abbr>i.e.</abbr> nothing since the 1960s).
         The final chapter is about getting a PhD.
         Most chapters contain some content that is specific to medicine and biomedicine,
-        but most content has a more general relevance. Some knowledge of medical or
-        biomedical terminology is helpful.
-        Because of its attention to medicine and biomedicine, the book can serve as a complement 
+        but most content has a more general relevance. Some knowledge of medical or biomedical terminology is helpful.
+        Because of its attention to medicine and biomedicine, the book can serve as a complement
         to other books on philosophy of science, which typically focus on physics.</span>
       </li>
     </ul>
@@ -950,10 +948,19 @@
           It seems I correctly took incommensurability to suggest a problem with the logico-analytic approach to science, <abbr>i.e.</abbr> with the logical empiricist and Popperian views.
         </blockquote>
       </li>
+      <!--@@Popper:-->
       <li>Stokes, Geoffrey:
         <i class="booktitle">Popper: Philosophy, Politics and Scientific Method</i>. Polity Press, 1998. (216 pages)
         <a href="https://politybooks.com/bookdetail/?isbn=9780745603223"><abbr>ISBN</abbr> 9780745603223</a>.
       </li>
+      <li>Keuth, Herbert:
+        <i class="booktitle">The Philosophy of Karl Popper</i>. Oxford University Press, 2005. (384 pages)
+        <a href="https://www.cambridge.org/de/academic/subjects/philosophy/twentieth-century-philosophy/philosophy-karl-popper"><abbr>ISBN</abbr> 9780521548304</a>.
+        <br />This is a translation of a monography that Keuth originally published in German in 2000 and which has since then been updated:
+        <span lang="de"><i class="booktitle">Die Philosophie Karl Poppers</i>. 2., durchgesehene und korrigierte Auflage. Mohr Siebeck,</span> 2011. (XXIII + 444 pages)
+        <a href="https://www.mohrsiebeck.com/buch/die-philosophie-karl-poppers-9783161506604" hreflang="de"><abbr>ISBN</abbr> 978-3-16-150660-4</a>.
+      </li>
+
       <li>Oreskes, Naomi:
         <i class="booktitle">Why Trust Science?</i>. Princeton University Press, 2019. (376 pages)
         <a href="https://press.princeton.edu/books/hardcover/9780691179001/why-trust-science"><abbr>ISBN</abbr> 9780691179001</a>.
