--- a/science/index.html
+++ b/science/index.html
@@ -1560,6 +1560,14 @@
           <a href="https://www.reddit.com/r/pics/comments/8av8rk/checkmate_flat_earth_society/">Checkmate Flat Earth Society</a>,
           posted by amazed_spirit on 09.04.2018.
         </li>
+        <li>Eren, Metin I.; et al:
+          <a href="https://www.sciencedirect.com/science/article/pii/S2352409X19305371">Experimental replication shows knives manufactured from frozen human feces do not work</a>,
+          <i class="journal">Journal of Archaeological Science: Reports</i>, Volume 27, October 2019 (Open Access, Creative Commons).
+          <br />This article triggered comments on Twitter, for example,
+          <q cite="https://twitter.com/ArmandDAngour/status/1392243641008132100">Shit knives will always be shit knives</q> (Armand D'Angour, 12.05.2021) and the comments below
+          <a href="https://twitter.com/DamanLangguth/status/1391981353588035586">Officially the best paper I have ever seen</a>.
+          <!--Also discussed at https://kutv.com/news/offbeat/scientists-test-to-see-if-knives-made-from-frozen-feces-can-cut-animal-tissue -->
+        </li>
         <!--@@science communication:-->
         <li>de Melo-Martín, Inmaculada; Intemann, Kristen:
           <i class="booktitle">The Fight Against Doubt: How to Bridge the Gap Between Scientists and the Public</i>. Oxford University Press, 2018. (232 pages)
