Add: Hunt: History: Why It Matters

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -234,6 +234,10 @@
           Not only do they have much to teach us about the past, but they can offer important lessons for the complex cultural, social and political worlds of the present.
           (&hellip;)</q>
         </li>
+        <li>Hunt, Lynn:
+          <i class="booktitle">History: Why It Matters</i>. Polity, 2018. (140 pages)
+          <a href="https://politybooks.com/bookdetail/?isbn=9781509525539"><abbr>ISBN</abbr> 9781509525546</a>.
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=6Sxttk5REkM">Who Killed the Liberal Arts?</a>
           is a five-minute YouTube video by
