Add: Shearmur et al: The Cambridge Companion to Popper

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -960,6 +960,10 @@
         <span lang="de"><i class="booktitle">Die Philosophie Karl Poppers</i>. 2., durchgesehene und korrigierte Auflage. Mohr Siebeck,</span> 2011. (XXIII + 444 pages)
         <a href="https://www.mohrsiebeck.com/buch/die-philosophie-karl-poppers-9783161506604" hreflang="de"><abbr>ISBN</abbr> 978-3-16-150660-4</a>.
       </li>
+      <li>Shearmur, Jeremy; Stokes, Geoffrey (editors):
+        <i class="booktitle">The Cambridge Companion to Popper</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2016. (420 pages)
+        <a href="https://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/cambridge-companion-popper"><abbr>ISBN</abbr> 9780521672429</a>.
+      </li>
 
       <li>Oreskes, Naomi:
         <i class="booktitle">Why Trust Science?</i>. Princeton University Press, 2019. (376 pages)
