Add: Shields: Aristotle

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1501,6 +1501,10 @@
 
       <h3>Aristotle (384 – 322 <abbr>BC</abbr>)</h3>
       <ul>
+        <li>Shields, Christopher:
+          <a href="https://plato.stanford.edu/entries/aristotle/">Aristotle</a>,
+          <i class="website">Stanford Encyclopedia of Philosophy</i>, 25.09.2008, revised on 25.08.2020.
+        </li>
         <li>
           <a href="https://www.philosophytalk.org/shows/aristotle">Aristotle (podcast)</a>,
           <i class="website">Philosophy Talk</i>, 25.01.2005.
