Add: Humphreys: Aristotle

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1505,6 +1505,10 @@
           <a href="https://plato.stanford.edu/entries/aristotle/">Aristotle</a>,
           <i class="website">Stanford Encyclopedia of Philosophy</i>, 25.09.2008, revised on 25.08.2020.
         </li>
+        <li>Humphreys, Justin:
+          <a href="https://iep.utm.edu/aristotl/">Aristotle (384 <abbr>B.C.E.</abbr>—322 <abbr>B.C.E.</abbr>)</a>,
+          <i class="website">Internet Encyclopedia of Philosophy</i> (no date; accessed on 15.05.2021).
+        </li>
         <li>
           <a href="https://www.philosophytalk.org/shows/aristotle">Aristotle (podcast)</a>,
           <i class="website">Philosophy Talk</i>, 25.01.2005.
