Add: May 2021, True SciPhi

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1006,7 +1006,7 @@
     <section>
       <h2>Specific Themes</h2>
       <p>TrueSciPhi has created a list of
-        <a href="http://truesciphi.org/phi.html">philosophers on Twitter</a>, ordered by number of followers.
+        <a href="https://truesciphi.org/phi.html">philosophers on Twitter</a>, ordered by number of followers.
         This list is biased towards philosophers in the English-speaking world,
         so it's easy to find missing Twitter accounts.
         (<abbr>E.g.</abbr>
@@ -1022,6 +1022,9 @@
         <a href="https://twitter.com/IP_SAS">InstitutePhilosophy</a> and
         <a href="https://twitter.com/OUPPhilosophy"><abbr title="Oxford University Press">OUP</abbr> Philosophy</a>,
         are not listed either.
+      </p>
+      <p>In May 2021, TrueSciPhi <a href="https://twitter.com/TrueSciPhi/status/1391854732973588491">tweeted a list of philosophy organisations and initiative on Twitter</a>;
+        see <a href="https://truesciphi.org/phiorg_col.html">Philosophy Organizations on Twitter (Grid View)</a>.
       </p>
       <ul>
         <li>
