Add Ig Nobel Prize Winners

--- a/science/index.html
+++ b/science/index.html
@@ -1560,6 +1560,10 @@
           <a href="https://www.reddit.com/r/pics/comments/8av8rk/checkmate_flat_earth_society/">Checkmate Flat Earth Society</a>,
           posted by amazed_spirit on 09.04.2018.
         </li>
+        <li>
+          <a href="https://www.improbable.com/ig-about/winners/">Ig® Nobel Prize Winners</a>,
+          <i class="website">Improbable Research</i> (accessed on 15.05.2021).
+        </li>
         <li>Eren, Metin I.; et al:
           <a href="https://www.sciencedirect.com/science/article/pii/S2352409X19305371">Experimental replication shows knives manufactured from frozen human feces do not work</a>,
           <i class="journal">Journal of Archaeological Science: Reports</i>, Volume 27, October 2019 (Open Access, Creative Commons).
