Add: Tom Scott: I promise this story about microwaves is interesting

--- a/science/index.html
+++ b/science/index.html
@@ -1631,6 +1631,11 @@
           <a href="https://en.wikipedia.org/wiki/Best_science_book_ever">Best science book ever</a>,
           <i class="wiki">Wikiepdia</i>.
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=2tdiKTSdE9Y">I promise this story about microwaves is interesting.</a>
+          (<i class="ytchannel">Tom Scott</i> on YouTube, 12 minutes, 17.05.2021).
+          <br />This video includes an interview with James Lovelock, who is now better know for his Gaia theory.
+        </li>
       </ul>
     </section>
     <!--
