Add: Thomas Aquinas

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1549,7 +1549,23 @@
         </li>
       </ul>
 
-      <h2>Giovanni Pico della Mirandola (1463 – 1494)</h2>
+      <h3>Thomas Aquinas (1225–1274)</h3>
+      <ul>
+        <li>McInerny, Ray; O'Callaghan, John:
+          <a href="https://plato.stanford.edu/entries/aquinas/">Saint Thomas Aquinas</a>,
+          <i class="website">Stanford Encyclopedia of Philosophy</i>, 12.07.1999; revised on 23.05.2014.
+        </li>
+        <li>Thomas Aquinas:
+          <i class="booktitle">asic Philosophical Writing: From the Summa Theologiae and The Principles of Nature</i>. Translated and edited by Steven Baldner. Broadview Press, 2018. (256 pages)
+          <a href="https://broadviewpress.com/product/thomas-aquinas-basic-philosophical-writings/"><abbr>ISBN</abbr> 9781554813728</a>.
+        </li>
+        <li>Horn, Trent:
+          <a href="https://www.equip.org/article/thomas-aquinass-five-proofs-for-god-revisited/">Thomas Aquinas’s Five Proofs for God Revisited</a>,
+          <i class="website">Christian Research Institute</i>, 11.08.2020.
+        </li>
+      </ul>
+
+      <h3>Giovanni Pico della Mirandola (1463 – 1494)</h3>
       <ul>
         <li>Pico della Mirandola, Giovanni:<span lang="de">
           <i class="booktitle">Neunhundert Thesen. Lateinisch–Deutsch</i>. Herausgegeben von Nikolaus Egel. Philosophische Bibliothek 708. Meiner,</span> 2018. (XLIV + 217 pages)
