--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2149,6 +2149,11 @@
           <i class="booktitle">Histoire de la sexualité 4: Les Aveux de la chair</i>. Bibliothèque des Histoires. Gallimard,</span> 2018. (448 pages)
           <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Bibliotheque-des-Histoires/Les-aveux-de-la-chair" hreflang="fr"><abbr>ISBN</abbr> 9782072700347</a>.
         </li>
+        <li>Gutting, Gary:
+          <i class="booktitle">The Cambridge Companion to Foucault</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2005. (486 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/philosophy/twentieth-century-philosophy/cambridge-companion-foucault-2nd-edition?format=PB"><abbr>ISBN</abbr> 9780521600538</a>.
+          <!--27.03.2021: €9: Book Broker Berlin: https://www.buchfreund.de/de/d/e/9780521408875/the-cambridge-companion-to-foucault-companions?bookId=100046870 -->
+        </li>
       </ul>
       <!--collected works and anthologies:
         Philosophie: Anthologie. Gallimard, 2004. http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/Philosophie
