Add: h3: Edmund Husserl (archives)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1883,6 +1883,30 @@
         </li>
       </ul>
 
+      <h3><span lang="de">Edmund Husserl<span> (1859 – 1938)</h3>
+      <ul>
+        <li>
+          <a href="https://hiw.kuleuven.be/hua/nl/index.html">Husserl-Archief Leuven</a>,
+          <i class="website"><abbr>KU</abbr> Leuven</i> (accessed on 17.05.2021).
+        </li>
+        <li><span lang="de">
+          <a href="https://husserl.phil-fak.uni-koeln.de/" hreflang="de">Husserl-Archiv der Universität zu Köln</a>,
+          <i class="website">Universität zu Köln</i></span> (accessed on 17.05.2021).
+        </li>
+        <li>
+          <a href="https://web.archive.org/web/20040807142614/http://www.hiw.kuleuven.ac.be/hiw/eng/husserl/">Husserl-Archives Leuven</a>
+          (archived on Archive.org; accessed on 17.05.2021).
+        </li>
+        <li>
+          <a href="https://web.archive.org/web/20051119191924/http://www.husserlarchiv.uni-freiburg.de/husserl.html" lang="de">Husserl-Archiv Freiburg</a>
+          (archived on Archive.org; accessed on 17.05.2021).
+        </li>
+        <li>
+          <a href="https://web.archive.org/web/20030201224341/http://www.umr8547.ens.fr/fonds-d'Archives.html" lang="fr">Bibliothèque des Archives Husserl de Paris</a>
+          (archived on Archive.org; accessed on 17.05.2021).
+        </li>
+      </ul>
+
       <h3 lang="fr">Gaston Bachelard (1884 – 1962)</h3>
       <ul>
         <li lang="de"><a href="https://de.wikipedia.org/w/index.php?title=Gaston_Bachelard&amp;oldid=160375070">Seite „Gaston Bachelard“</a>.
