Add resources on Michel Foucault

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2178,6 +2178,14 @@
           <a href="https://www.cambridge.org/de/academic/subjects/philosophy/twentieth-century-philosophy/cambridge-companion-foucault-2nd-edition?format=PB"><abbr>ISBN</abbr> 9780521600538</a>.
           <!--27.03.2021: €9: Book Broker Berlin: https://www.buchfreund.de/de/d/e/9780521408875/the-cambridge-companion-to-foucault-companions?bookId=100046870 -->
         </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunkkultur.de/missbrauchsvorwuerfe-gegen-michel-foucault-beweise-gibt-es.1013.de.html?dram:article_id=495428" hreflang="de">Missbrauchsvorwürfe gegen Michel Foucault - "Beweise gibt es nicht"</a>,
+          <i class="website">Deutschlandfunk Kultur</i>,</span> 08.04.2021.
+        </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunkkultur.de/vorwuerfe-gegen-michel-foucault-heilsame-ent-taeuschung.2162.de.html?dram:article_id=496174" hreflang="de">Vorwürfe gegen Michel Foucault - Heilsame Ent-täuschung</a>,
+          <i class="website">Deutschlandfunk Kultur</i>,</span> 25.04.2021.
+        </li>
       </ul>
       <!--collected works and anthologies:
         Philosophie: Anthologie. Gallimard, 2004. http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/Philosophie
