--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2839,6 +2839,10 @@
           <q>In a small literary gem full of sardonic wit, brilliant insights, and provocative criticism Witold Gombrowicz discusses
           Kant, Hegel, Schopenhauer, Kierkegaard, Sartre, and Heidegger in six "one-hour" essays—and addresses Marxism in a "fifteen-minute" piece.</q>
         </li>
+        <li><span lang="de">Safranski, Rüdiger:
+          <i class="booktitle">Wieviel Wahrheit braucht der Mensch? Über das Denkbare und das Lebbare</i>. S. Fischer Verlage,</span> 1993. (224 pages)
+          <a href="https://www.fischerverlage.de/buch/ruediger-safranski-wieviel-wahrheit-braucht-der-mensch-9783596109777" hreflang="de"><abbr>ISBN</abbr> 978-3-596-10977-7</a>.
+        </li>
         <li>McGrade, A. S. (editor):
           <i class="booktitle">The Cambridge Companion to Medieval Philosophy</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2003. (424 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/philosophy/medieval-philosophy/cambridge-companion-medieval-philosophy?format=PB"><abbr>ISBN</abbr> 9780521000635</a>.
