--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2848,6 +2848,10 @@
           <a href="https://www.cambridge.org/de/academic/subjects/philosophy/medieval-philosophy/cambridge-companion-medieval-philosophy?format=PB"><abbr>ISBN</abbr> 9780521000635</a>.
           <!--CUP: £ 27.99; 27.03.2021: €29,50: nika-books: https://www.buchfreund.de/de/d/e/9780521000635/the-cambridge-companion-to-medieval-philosophy?bookId=95446365 -->
         </li>
+        <li>McLaughlin, Jeff:
+          <a href="https://pressbooks.bccampus.ca/classicreadings/"><i class="booktitle">The Originals: Classic Readings in Western Philosophy</i></a>.
+          <i class="website">British Columbia/Yukon Open Authoring Platform</i>, December 2017. (Creative Commons Attribution 4.0 International License.)
+        </li>
         <li>Airaksinen, Timo:
           <i class="booktitle">Vagaries of Desire: A Collection of Philosophical Essays</i>. Brill, 2019.
           <a href="https://brill.com/view/title/38852?language=en"><abbr>ISBN</abbr> 978-90-04-41030-5 (ebook <abbr>PDF</abbr>; Open Access)</a>.
