Add: Michaud: La violence

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2999,6 +2999,12 @@
           <i class="booktitle">Our Fundamental Problem: A Revolutionary Approach to Philosophy</i>. McGill-Queen's University Press, 2020. (232 pages)
           <a href="https://www.mqup.ca/our-fundamental-problem-products-9780228001522.php?page_id=73"><abbr>ISBN</abbr> 9780228001522</a>.
         </li>
+        <li><span lang="fr">Michaud, Yves:
+          <i class="booktitle">La violence</i>. Que sais-je ? Presses universitaires de France,</span> 2018. (128 pages)
+          <a href="https://www.puf.com/content/La_violence" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-081353-8</a>.
+          <br />Publisher's book description
+          <q lang="fr">En analysant les explications anthropologiques, psychologiques, sociologiques, cet ouvrage nous invite à comprendre la violence aujourd'hui et la place que tient cette notion dans nos représentations de la politique et de la vie en général.</q>
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=nQHBAdShgYI">The Trouble with Transporters</a>
           is a 6-minute video by <abbr>CGP</abbr> Grey
